--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.7",
     "sharp": "^0.30.6"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/react-scroll": "^1.8.3",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.7.3"
