--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type":"module"
   },
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0",
     "js-cookie": "^3.0.1",
     "next": "^12.1.6",
     "react": "18.2.0",
-    "react-bootstrap": "^2.4.0",
+    "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "18.2.0",
     "sharp": "^0.30.6"
