--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^3.0.1",
     "next": "^12.1.6",
     "react": "18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "18.2.0",
     "react-scroll": "^1.8.7",
