--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "@react-three/fiber": "^8.3.0",
     "bootstrap": "^5.2.0",
     "camera-controls": "^1.36.1",
+    "downshift": "^6.1.9",
     "js-cookie": "^3.0.1",
     "next": "^12.1.6",
     "react": "18.2.0",
-    "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.8.7",
     "sharp": "^0.30.6",
     "three": "^0.143.0"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.1",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
