--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "bootstrap": "^5.2.0",
     "camera-controls": "^1.36.1",
     "downshift": "^6.1.9",
+    "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^3.0.1",
     "next": "^12.1.6",
     "react": "18.2.0",
     "react-bootstrap-icons": "^1.8.4",
+    "react-canvas-draw": "^1.2.1",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
+    "react-images-uploading": "^3.1.7",
     "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.8.7",
     "sharp": "^0.30.6",
