--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "bootstrap": "^5.2.0",
     "camera-controls": "^1.36.1",
     "downshift": "^6.1.9",
+    "emailjs-com": "^3.2.0",
     "isomorphic-unfetch": "^3.1.0",
     "js-cookie": "^3.0.1",
     "next": "^12.1.6",
     "react": "18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-bootstrap-icons": "^1.8.4",
     "react-canvas-draw": "^1.2.1",
     "react-dom": "18.2.0",
