--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,3 @@
 {
-  extends: ['next', 'next/core-web-vitals', 'eslint:recommended'],
-  rules: {
-    'react/no-unescaped-entities': 0, 
-  },
+  "extends": "next/core-web-vitals"
 }
